--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,9 @@ spring:
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: ${DB_POOL_SIZE:4}
+    jackson:
+      date-format: yyyy-MM-dd
+      time-format: HH:mm
   jpa:
     database: postgresql
     hibernate:
