chone : jackson 날짜 시간 형식

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,8 @@ spring:
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: ${DB_POOL_SIZE:4}
+  jackson:
+    date-format: yyyy-MM-dd HH:mm
 
   jpa:
     database: postgresql
