feat: application.yaml에 jwt 관련 설정 추가

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,3 +15,8 @@ spring:
     database: postgresql
     hibernate:
       ddl-auto: update
+
+jwt:
+  secret: ${JWT_SECRET}
+  access-expiration: ${JWT_ACCESS_EXPIRATION_MS}
+  refresh-expiration: ${JWT_REFRESH_EXPIRATION_MS}
