--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,3 +20,4 @@ jwt:
   secret: ${JWT_SECRET}
   access-expiration: ${JWT_ACCESS_EXPIRATION_MS}
   refresh-expiration: ${JWT_REFRESH_EXPIRATION_MS}
+  algorithm: ${JWT_ALGORITHM}
