feat: FAQ 시스템 도메인 추가 및 JWT 설정 개선
## 변경사항

### 추가 기능
- FAQ 도메인 구현 (Category, SubCategory, Faq, FaqHistory 엔티티)
- FAQ 관리 Repository 인터페이스 (CategoryRepository, SubCategoryRepository, FaqRepository, FaqHistoryRepository)
- FAQ 시스템 설계 문서 (sdd/faq-system.md)

### 개선사항
- JWT 설정에 기본값 추가 (application.yaml)
  - jwt.secret: 기본값 추가
  - jwt.access-expiration: 1시간 (3600000ms)
  - jwt.refresh-expiration: 7일 (604800000ms)
  - jwt.algorithm: HmacSHA256 (기본값)

### 문서 업데이트
- README.md: 프로젝트 구조에 FAQ 도메인 추가
- README.md: 엔티티 목록 테이블에 FAQ 엔티티 4개 추가

## 엔티티 관계
- Category (1) ──> SubCategory (N)
- SubCategory (1) ──> Faq (N)
- User (1) ──> Faq (N) [writer, lastEditor]
- Faq (1) ──> FaqHistory (N)

## 특징
- 소프트 삭제 지원 (deletedFlag)
- 작성자/수정자 추적
- 수정 이력 관리

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -33,7 +33,7 @@ app:
     show-sql: true
 
 jwt:
-  secret: ${JWT_SECRET}
-  access-expiration: ${JWT_ACCESS_EXPIRATION_MS}
-  refresh-expiration: ${JWT_REFRESH_EXPIRATION_MS}
-  algorithm: ${JWT_ALGORITHM}
+  secret: ${JWT_SECRET:your-secret-key-change-in-production}
+  access-expiration: ${JWT_ACCESS_EXPIRATION_MS:3600000}
+  refresh-expiration: ${JWT_REFRESH_EXPIRATION_MS:604800000}
+  algorithm: ${JWT_ALGORITHM:HmacSHA256}
