[refactor] Auth 예외처리를 프로젝트 표준 방식으로 통일
  - AuthErrorCode를 CustomErrorCode 인터페이스 구현 (HttpStatus, logMessage 추가)
  - AuthErrorCode를 global/exceptions/error 패키지로 이동
  - AuthException 클래스 생성 (BasicException 상속)
  - AuthService, AuthController의 예외를 AuthException으로 통일
  - AuthExceptionHandler 삭제 (GlobalExceptionHandler가 처리)

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ out/
 # IDE
 .idea/
 *.iml
+CLAUDE.md
 
 # Logs & temp
 *.log
@@ -19,6 +20,7 @@ Thumbs.db
 # Local env & secrets
 .env
 .env.*
+!.env.example
 src/main/resources/application-local.yml
 src/main/resources/application-*.local.yml
 *.jks
