fix: 이메일 인증 코드 재발송 시 500 에러 수정
- 기존 인증 코드 삭제 후 flush() 호출하여 unique 제약조건 충돌 방지
- .gitignore에 docs/, postman/ 등 불필요한 파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ Thumbs.db
 # Local env & secrets
 .env
 .env.*
-!.env.example
 src/main/resources/application-local.yml
 src/main/resources/application-*.local.yml
 *.jks
@@ -34,3 +33,15 @@ src/main/resources/application-*.local.yml
 # DB dump
 *.sql
 dump/
+
+# Documentation & Guides
+GlobalExceptionHandler_Guide.md
+PROJECT_STRUCTURE.md
+docs/
+pull_request_template.md
+
+# Postman
+postman/
+
+# Override .env.example (remove from tracking)
+.env.example
