--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -144,8 +144,8 @@ jobs:
     name: 서버에 Docker Compose 배포
     runs-on: ubuntu-latest
     needs: build-and-push    # 이미지 푸시 성공 후 실행
-    # main 브랜치에 push된 경우만 실행 (운영 배포)
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    # (deprecate)main 브랜치에 push된 경우만 실행 (운영 배포)
+    # if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
       # 1. 소스 코드 체크아웃 (docker-compose.yaml 사용)
