--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -17,7 +17,9 @@ env:
   IMAGE_NAME: ${{ github.repository_owner }}/commutemate-server  # Helm values의 springApp.image와 일치하도록 설정
 
 jobs:
-  # Job 1: 테스트 실행
+  # ===================================================================
+  # Job 1: 테스트 실행 (build-and-push와 병렬 실행)
+  # ===================================================================
   test:
     name: 테스트 실행
     runs-on: ubuntu-latest
@@ -39,9 +41,11 @@ jobs:
       - name: Gradle 실행 권한 부여
         run: chmod +x gradlew
 
-      # 4. Gradle 테스트 실행
+      # 4. Gradle 테스트 실행 (빌드 캐시 활성화)
       - name: 테스트 실행
-        run: ./gradlew test --no-daemon
+        run: ./gradlew test --no-daemon --build-cache
+        env:
+          GRADLE_BUILD_CACHE_ENABLED: true
 
       # 5. 테스트 결과 업로드 (실패 시에도 업로드)
       - name: 테스트 결과 업로드
@@ -51,15 +55,15 @@ jobs:
           name: test-results
           path: build/test-results/
 
-  # Job 2: 컨테이너 이미지 빌드 및 GHCR 푸시
-  # OCI (Open Container Initiative) 표준 이미지 빌드
-  # Kubernetes containerd, CRI-O 등 모든 OCI 호환 런타임에서 실행 가능
+  # ===================================================================
+  # Job 2: 컨테이너 이미지 빌드 및 GHCR 푸시 (test와 병렬 실행)
+  # ===================================================================
   build-and-push:
     name: 컨테이너 이미지 빌드 및 푸시
     runs-on: ubuntu-latest
-    needs: test    # 테스트 성공 후 실행
-    # (deprecate)main 브랜치에 push된 경우만 실행
-    # if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    # needs 제거 - test와 병렬 실행
+    # PR인 경우 빌드만 하고 push는 하지 않음
+    if: github.event_name == 'push'
 
     # GHCR 접근 권한 설정
     permissions:
@@ -79,7 +83,6 @@ jobs:
         uses: actions/checkout@v4
 
       # 2. BuildKit 설정 (OCI 표준 이미지 빌드)
-      # containerd, CRI-O 등 K8s 런타임과 완벽 호환
       - name: BuildKit 설정
         uses: docker/setup-buildx-action@v3
         with:
@@ -91,10 +94,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}           # GitHub 사용자명
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          # github action에서 워크플로우 실행마다 제공하는 일회성 토큰,
-          # jobs.build-and-push.permissions.packages에서 권한을 지정해서 사용함.
 
       # 4. OCI 이미지 메타데이터 추출 (태그, 레이블)
       - name: 컨테이너 이미지 메타데이터 추출
@@ -128,19 +129,19 @@ jobs:
       - name: 이미지 출처 증명 생성
         uses: actions/attest-build-provenance@v1
         with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} # 위에서 설정한 env 설정들
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           subject-digest: ${{ steps.build-and-push.outputs.digest }}
           push-to-registry: true
 
   # ===================================================================
   # Job 3: SSH를 통한 Docker Compose 배포
+  # test와 build-and-push 둘 다 성공해야 실행
   # ===================================================================
   deploy-to-server:
     name: 서버에 Docker Compose 배포
     runs-on: ubuntu-latest
-    needs: build-and-push    # 이미지 푸시 성공 후 실행
-    # (deprecate)main 브랜치에 push된 경우만 실행 (운영 배포)
-    # if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: [test, build-and-push]    # 테스트와 빌드 모두 성공 후 실행
+    if: github.event_name == 'push'
 
     steps:
       # 1. 소스 코드 체크아웃 (docker-compose.yaml 사용)
@@ -191,11 +192,7 @@ jobs:
             else
               echo "IMAGE_TAG=sha-${{ github.sha }}" >> .env
             fi
-          
-            # DB 정보 등 민감한 정보는 서버에 이미 있다고 가정하고 건드리지 않거나,
-            # 필요한 경우 Github Secrets에서 가져와서 여기서 >> .env 로 추가해야 합니다.
-            # (예: echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env)
-          
+
             echo "✅ .env 파일이 업데이트되었습니다."
             cat .env
           EOF
@@ -215,7 +212,7 @@ jobs:
         run: |
           sshpass -e ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
             cd ${{ secrets.DEPLOY_PATH }}
-          
+
             # 최신 상태 반영을 위해 down 후 up (또는 pull 후 up -d)
             docker-compose pull app
             docker-compose up -d --remove-orphans
