--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -49,6 +49,10 @@ app:
     concurrent:
       max: ${SCHEDULE_CONCURRENT_MAX:5}
 
+springdoc:
+  swagger-ui:
+    server-url: ${SWAGGER_SERVER_URL:http://localhost:8080}
+
 jwt:
   secret: ${JWT_SECRET:your-secret-key-change-in-production}
   access-expiration: ${JWT_ACCESS_EXPIRATION_MS:3600000}
