chone: 헬스체크를 위한 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     //PostgreSQL 드라이버
     implementation 'org.postgresql:postgresql'
     compileOnly 'org.projectlombok:lombok'
