--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -120,8 +120,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          #cache-from: type=gha
+          #cache-to: type=gha,mode=max
           platforms: linux/amd64
           outputs: type=image,oci-mediatypes=true
 
