fix: 빌드 스크립트 수정 (빌드 오류 발생 시 중단)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,8 @@ jobs:
           username: ${{ secrets.ORACLE_USERNAME }}
           key: ${{ secrets.ORACLE_SSH_KEY }}
           script: |
-            cd ~/app/source
-            docker build -t commute-mate-backend:latest .
-            cd ~/app
-            chmod +x deploy.sh
+            cd ~/app/source && \
+            docker build -t commute-mate-backend:latest . && \
+            cd ~/app && \
+            chmod +x deploy.sh && \
             ./deploy.sh
