fix: 배포 전 기존 소스폴더 초기화 후 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Clean and Create Deploy Directory
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.ORACLE_HOST }}
+          username: ${{ secrets.ORACLE_USERNAME }}
+          key: ${{ secrets.ORACLE_SSH_KEY }}
+          script: |
+            rm -rf ~/app/source
+            mkdir -p ~/app/source
+
       - name: Copy source to server
         uses: appleboy/scp-action@v0.1.7
         with:
